# gta

./: .gitignore  CMakeLists.txt  README.md
config/: classification_gta1.json  functions_gta1.json  functions_london69.json  pe_analysis_gta1.json  pe_analysis_gta1_original.json  pe_analysis_london61.json  pe_analysis_london69.json
docs/: TECHNICAL.md
src/common/: types.h
src/engine/: iat_bridge.c  main.c  premap.c  recomp_runtime.c  recomp_runtime.h  win32_compat.h
src/recomp/gen_london69/: london69_0000.c  london69_0001.c  london69_0002.c  london69_0003.c  london69_0004.c  london69_dispatch.c  london69_funcs.h
src/sound/: miles_shim.c  miles_shim.h
src/video/: smacker_shim.c  smacker_shim.h
tools/: run_pipeline.py
